--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@react-google-maps/api": "^2.19.2",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-luxon": "^1.3.1",
     "luxon": "^3.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-modal": "^3.16.1",
